# ml_hands_on

./: .gitignore  Dockerfile  Embeddings.md  QA.md  app.py  main.py  ml_topics.md  numpy_deep.md  opencv_photo.ipynb  postgreSQL.md  requirements.txt
ML_ANN/: PretrainedNetworks.ipynb  README.md  fashion_mnist_MLP.ipynb  fashion_mnist_mlp 1.ipynb  imgconvert.py  learning.py  main.py  numpy_deep.py  opencvdemo.py  pyproject.toml
ML_CNN/: 5_flower_dataset_Neural_Network_regularization.py  requirements.txt
ML_HML/: classification_MNIST.py  electronic_review.py  housing_price.ipynb  housing_price.py  main.py  pyproject.toml  test.py
ML_HML/src/: load_data.py
ML_PROD_DEPLOY/: README.md  app.py  requirements.txt
ML_PROD_DEPLOY/src/: data_loader.py  evalyate.py  model.py  train.py
ML_PROD_DEPLOY/static/: styles.css
configs/: config.yaml
models/: random_forest_model.pkl
src/: train.py
templates/: index.html
