[project]
name = "ml-hml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "pandas>=2.3.3",
    "marimo[recommended]>=0.17.7",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
